# drone

./: readme.md  rust-toolchain.toml
ahrs/: Cargo.toml
ahrs/src/: lib.rs  main.rs
backend/: .gitignore  main.py  pyproject.toml
backend/static/: index.html
drone/: Cargo.toml
drone/src/: main.rs
frontend/: index.html  main.js  package-lock.json  package.json  vite.config.js
gui/: main.py  pyproject.toml
gui/gui/: kalman.py
gui/resources/: rocket.stl
icm_20948/: Cargo.toml
icm_20948/src/: main.rs
mpu_9250/: Cargo.toml
mpu_9250/src/: lib.rs  main.rs  register.rs
tests/: Cargo.toml
tests/src/: main.rs
