[tool.poetry]
name = "gui"
version = "0.1.0"
description = ""
authors = ["Ian <exor2008@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
numpy = "^1.26.3"
vispy = "^0.14.1"
pyqt6 = "^6.6.1"
pyopengl = "^3.1.7"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
